# Square-Classical-Heisenberg-Lattice

./: Anneal.ipynb  CMakeLists.txt  MC_CG.py  Monte Carlo + Conjugate gradient 2.ipynb  Monte Carlo + Conjugate gradient.ipynb  README.md  Skyrmion-MC+CG.ipynb  Spiral-Phase-Example.ipynb  Square_Skyrmion_Annealing.py  main.cpp
.ipynb_checkpoints/: Anneal-checkpoint.ipynb  Skyrmion-MC+CG-checkpoint.ipynb
